--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "name": "cmdb",
     "require": {
-        "guzzlehttp/psr7": "^1.6"
+        "guzzlehttp/psr7": "^1.6",
+        "react/event-loop": "^1.1",
+        "react/http": "^0.8.4",
+        "react/socket": "^1.3",
+        "react/child-process": "^0.6.1"
     }
 }
